--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev": "next dev -p 8080",
+  "build": "next build",
+  "start": "next start -p 8080"
+},
+  
   "dependencies": {
     "@stripe/stripe-js": "^5.7.0",
     "next": "^15.2.0",
